# tally

./: .bazelignore  .bazelrc  .coderabbit.yaml  .custom-gcl.yml  .gitattributes  .gitignore  .gitmodules  .golangci.yaml  .goreleaser.yml  .lefthook.yml  .rumdl.toml  .taplo.toml  .typos.toml  .yamllint  AGENTS.md  BUILD.bazel  CLA.md  CLAUDE.md  LICENSE  MODULE.bazel  Makefile  NOTICE  PLAN.md  README.md  RULES.md  codecov.yml  go.mod  go.sum  hk.pkl  main.go  renovate.json  schema.json  sgconfig.yml  zensical.toml
_integrations/intellij-tally/: BUILD.bazel  README.md  WebStorm.BUILD.bazel  project.yaml
_integrations/intellij-tally/intellij-plugin/: module.yaml
_integrations/intellij-tally/tally-build/: module.yaml  plugin.yaml
_integrations/vscode-tally/: .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  .vscodeignore  BUILD.bazel  DEVELOPMENT.md  README.md  bunfig.toml  package.json  playwright.config.ts  tsconfig.json
_integrations/vscode-tally/src/: extension.ts
_integrations/vscode-tally/tests-ui/: code-actions.spec.ts  diagnostics.spec.ts  extension.setup.ts  extension.teardown.ts  fix-all.spec.ts  fixtures.ts  format.spec.ts  run-playwright.mjs  status-bar.spec.ts  tsconfig.json  utils.ts  utils_code_server.ts
_integrations/vscode-tally/tools/: package-vsix.js
_integrations/zed-tally/: BUILD.bazel  Cargo.toml  README.md  extension.toml
_integrations/zed-tally/src/: tally.rs
_tools/customlint/: BUILD.bazel  README.md  analyzers_test.go  cmdliteral.go  cmdliteral_test.go  docurl.go  docurl_test.go  lspliteral.go  lspliteral_test.go  main_test.go  plugin.go  plugin_test.go  rulestruct.go  rulestruct_test.go
_tools/schema-gen/: BUILD.bazel  main.go
_tools/shellcheck-wasm/: BUILD.bazel  Dockerfile  Reactor.hs  versions.env
_tools/shellcheck-wasm/patches/: 0001-json1-only.patch  0002-stdin-only.patch  0003-drop-sc2148.patch
_tools/shellcheck-wasm/rewrites/: 0001-json1-only.yml  0002-stdin-only.yml  0003-drop-sc2148.yml  0004-drop-sc2187.yml  0005-drop-sc1090.yml  0006-drop-sc1091.yml  0007-drop-sc1040.yml
internal/async/: BUILD.bazel  resolver.go  runtime.go  runtime_test.go  types.go
internal/config/: BUILD.bazel  ci.go  config.go  config_test.go  overrides.go  rules.go  schema_type_coercion_test.go  validation.go
internal/context/: BUILD.bazel  context.go  context_test.go  dockerignore.go
internal/directive/: BUILD.bazel  conversion_test.go  directive.go  directive_test.go  facts.go  filter.go  format.go  format_test.go  lex.go  lex_test.go  parser.go  semantic.go  span.go
internal/discovery/: BUILD.bazel  discovery.go  discovery_test.go
internal/dockerfile/: BUILD.bazel  heredoc.go  heredoc_test.go  parser.go  parser_helpers_test.go  parser_test.go
internal/facts/: BUILD.bazel  command_operations.go  command_operations_test.go  directive.go  doc.go  facts.go  facts_test.go  observable_files.go  observable_files_test.go
internal/facts/ruby/: BUILD.bazel  facts.go  facts_test.go  gemfile.go  gemfile_test.go  lockfile.go  lockfile_test.go  ruby_version.go  ruby_version_test.go
internal/fileval/: BUILD.bazel  executable_unix.go  executable_windows.go  fileval.go  fileval_test.go  utf8.go
internal/fix/: BUILD.bazel  conflict.go  conflict_test.go  dl4001_cleanup_resolver.go  dl4001_cleanup_resolver_test.go  epilogue_order_resolver.go  finalizer.go  fix.go  fix_test.go  fixer.go  fixer_precedence_test.go  fixer_test.go  fixmodes.go  heredoc_format_finalizer.go  heredoc_format_finalizer_test.go  heredoc_resolver.go  heredoc_resolver_test.go  interaction_debug_test.go  newline_resolver.go  resolver.go  resolver_test.go  revalidate.go
internal/heredoc/: BUILD.bazel  format.go  format_test.go
internal/heredocfmt/: BUILD.bazel  dockerfile.go  dockerfile_test.go  format.go  format_test.go
internal/highlight/: BUILD.bazel  highlight.go  highlight_test.go
internal/highlight/batch/: BUILD.bazel  tokenize.go  (+2 more)
internal/integration/: BUILD.bazel  ai_autofix_dl4001_test.go  benchmark_test.go  check_cases_test.go  check_test.go  docker_plugin_test.go  env_test.go  error_test.go  fix_cases_test.go  fix_scenarios_test.go  fix_test.go  fixture_harness_test.go  gemini_smoke_test.go  harness_test.go  integration_test.go  lint_cases_test.go  lint_test.go  main_test.go  orchestrator_test.go  shellcheck_sc1040_fix_test.go  snapshots_test.go  stdin_test.go  version_test.go
internal/invocation/: BUILD.bazel  bake.go  bake_test.go  compose.go  compose_test.go  context.go  context_test.go  helpers.go  helpers_test.go  model.go
internal/linter/: BUILD.bazel  async.go  config.go  config_test.go  linter.go  linter_test.go  processors.go  skip.go
internal/lspserver/: BUILD.bazel  async.go  async_test.go  codeactions.go  codeactions_test.go  diagnostic_mode.go  diagnostics.go  diagnostics_test.go  document_content.go  document_content_test.go  documents.go  documents_test.go  execute_command.go  execute_command_test.go  fixall.go  fixall_test.go  formatting.go  formatting_minimal_replacement_test.go  formatting_position_test.go  opendoc.go  opendoc_test.go  semantic_tokens.go  semantic_tokens_cache.go  semantic_tokens_test.go  server.go  server_test.go  settings.go  settings_test.go  suppress.go  suppress_test.go
internal/lsptest/: BUILD.bazel  lsp_test.go  setup_test.go
internal/patch/: BUILD.bazel  patch.go  patch_test.go
internal/processor/: BUILD.bazel  dedup.go  directive.go  enable.go  exclude.go  path.go  processor.go  processor_test.go  severity.go  snippet.go  snippet_test.go  sort.go  supersede.go  supersede_test.go
internal/psanalyzer/: BUILD.bazel  protocol.go  runner.go  runner_test.go  unavailable.go  version.go
internal/registry/: BUILD.bazel  async_resolver.go  classify_error_test.go  containers.go  mock_resolve_test.go  oci.go  resolve_debug_test.go  resolver.go  resolver_test.go  test_env_resolver.go
internal/reporter/: BUILD.bazel  github_actions.go  github_actions_test.go  json.go  json_test.go  markdown.go  markdown_test.go  reporter.go  reporter_test.go  sarif.go  sarif_test.go  text.go  text_test.go
(+3019 files in other folders)
