load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cmdliteral.go",
        "docurl.go",
        "lspliteral.go",
        "plugin.go",
        "rulestruct.go",
    ],
    importpath = "github.com/wharflab/tally/_tools/customlint",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golangci_plugin_module_register//register:go_default_library",
        "@org_golang_x_tools//go/analysis:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/inspect:go_default_library",
        "@org_golang_x_tools//go/ast/inspector:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "cmdliteral_test.go",
        "docurl_test.go",
        "lspliteral_test.go",
        "rulestruct_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@org_golang_x_tools//go/analysis/analysistest:go_default_library"],
)
