load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/wharflab/tally/_tools/schema-gen",
    visibility = ["//visibility:private"],
    deps = ["@com_github_atombender_go_jsonschema//pkg/generator:go_default_library"],
)

go_binary(
    name = "schema-gen",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
