load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["discovery.go"],
    importpath = "github.com/wharflab/tally/internal/discovery",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_bmatcuk_doublestar_v4//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["discovery_test.go"],
    embed = [":go_default_library"],
)
