load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "command_operations.go",
        "doc.go",
        "facts.go",
        "observable_files.go",
    ],
    importpath = "github.com/wharflab/tally/internal/facts",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/dockerfile:go_default_library",
        "//internal/facts/ruby:go_default_library",
        "//internal/semantic:go_default_library",
        "//internal/shell:go_default_library",
        "//internal/sourcemap:go_default_library",
        "@com_github_distribution_reference//:go_default_library",
        "@com_github_moby_buildkit//frontend/dockerfile/command:go_default_library",
        "@com_github_moby_buildkit//frontend/dockerfile/instructions:go_default_library",
        "@com_github_moby_buildkit//frontend/dockerfile/parser:go_default_library",
        "@com_github_moby_buildkit//frontend/dockerfile/shell:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "command_operations_test.go",
        "facts_test.go",
        "observable_files_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//internal/dockerfile:go_default_library",
        "//internal/semantic:go_default_library",
        "//internal/shell:go_default_library",
        "@com_github_moby_buildkit//frontend/dockerfile/instructions:go_default_library",
    ],
)
