load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["format.go"],
    importpath = "github.com/wharflab/tally/internal/heredoc",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/runmount:go_default_library",
        "//internal/shell:go_default_library",
        "@com_github_moby_buildkit//frontend/dockerfile/instructions:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["format_test.go"],
    embed = [":go_default_library"],
)
