load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["highlight.go"],
    importpath = "github.com/wharflab/tally/internal/highlight",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/directive:go_default_library",
        "//internal/dockerfile:go_default_library",
        "//internal/highlight/core:go_default_library",
        "//internal/highlight/dockerfile:go_default_library",
        "//internal/highlight/extract:go_default_library",
        "//internal/highlight/shell:go_default_library",
        "//internal/semantic:go_default_library",
        "//internal/shell:go_default_library",
        "//internal/sourcemap:go_default_library",
        "@com_github_moby_buildkit//frontend/dockerfile/command:go_default_library",
        "@com_github_moby_buildkit//frontend/dockerfile/instructions:go_default_library",
        "@com_github_moby_buildkit//frontend/dockerfile/parser:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["highlight_test.go"],
    data = ["//_tools/shellcheck-wasm:Dockerfile"],
    embed = [":go_default_library"],
    deps = ["//internal/highlight/core:go_default_library"],
)
