load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "async.go",
        "codeactions.go",
        "diagnostic_mode.go",
        "diagnostics.go",
        "document_content.go",
        "documents.go",
        "execute_command.go",
        "fixall.go",
        "formatting.go",
        "opendoc.go",
        "semantic_tokens.go",
        "semantic_tokens_cache.go",
        "server.go",
        "settings.go",
        "suppress.go",
    ],
    importpath = "github.com/wharflab/tally/internal/lspserver",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/async:go_default_library",
        "//internal/config:go_default_library",
        "//internal/directive:go_default_library",
        "//internal/dockerfile:go_default_library",
        "//internal/fileval:go_default_library",
        "//internal/fix:go_default_library",
        "//internal/highlight:go_default_library",
        "//internal/highlight/core:go_default_library",
        "//internal/highlight/lspencode:go_default_library",
        "//internal/invocation:go_default_library",
        "//internal/linter:go_default_library",
        "//internal/lsp/protocol:go_default_library",
        "//internal/processor:go_default_library",
        "//internal/registry:go_default_library",
        "//internal/rules:go_default_library",
        "//internal/sourcemap:go_default_library",
        "//internal/version:go_default_library",
        "@org_golang_x_exp_jsonrpc2//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "async_test.go",
        "codeactions_test.go",
        "diagnostics_test.go",
        "document_content_test.go",
        "documents_test.go",
        "execute_command_test.go",
        "fixall_test.go",
        "formatting_minimal_replacement_test.go",
        "formatting_position_test.go",
        "opendoc_test.go",
        "semantic_tokens_test.go",
        "server_test.go",
        "settings_test.go",
        "suppress_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//internal/config:go_default_library",
        "//internal/directive:go_default_library",
        "//internal/dockerfile:go_default_library",
        "//internal/highlight:go_default_library",
        "//internal/linter:go_default_library",
        "//internal/lsp/protocol:go_default_library",
        "//internal/registry:go_default_library",
        "//internal/rules:go_default_library",
        "//internal/sourcemap:go_default_library",
        "@com_github_gkampitakis_go_snaps//snaps:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_golang_x_exp_jsonrpc2//:go_default_library",
    ],
)
