load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["patch.go"],
    importpath = "github.com/wharflab/tally/internal/patch",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_bluekeyes_go_gitdiff//gitdiff:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["patch_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//require:go_default_library"],
)
